<resources>
    <string name="app_name">Baseball</string>
    <string name="team_a">Team A</string>
    <string name="team_b">Team B</string>
    <string name="pitch">pitch</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="r">R</string>
    <string name="h">H</string>
    <string name="e">E</string>
    <string name="next_pitch_button">next pitch</string>
    <string name="reset_button">reset</string>
    <string name="runs">runs</string>
    <string name="hits">hits</string>
    <string name="errors">errors</string>
</resources>
