<?xml version="1.0" encoding="utf-8"?>
<TableRow xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:showIn="@layout/activity_main">

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="3" />

    <TextView
        style="@style/table"
        android:text="@string/_1" />

    <TextView
        style="@style/table"
        android:text="@string/_2" />

    <TextView
        style="@style/table"
        android:text="@string/_3" />

    <TextView
        style="@style/table"
        android:text="@string/_4" />

    <TextView
        style="@style/table"
        android:text="@string/_5" />

    <TextView
        style="@style/table"
        android:text="@string/_6" />

    <TextView
        style="@style/table"
        android:text="@string/_7" />

    <TextView
        style="@style/table"
        android:text="@string/_8" />

    <TextView
        style="@style/table"
        android:text="@string/_9" />

    <TextView
        style="@style/table"
        android:text="@string/r" />

    <TextView
        style="@style/table"
        android:text="@string/h" />

    <TextView
        style="@style/table"
        android:text="@string/e" />
</TableRow>