<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="@dimen/vertical_margin"
    android:layout_marginLeft="@dimen/horizontal_margin"
    android:layout_marginRight="@dimen/horizontal_margin"
    android:layout_marginTop="@dimen/vertical_margin"
    tools:context="com.example.android.baseball.MainActivity">

    <LinearLayout
        android:id="@+id/first_part"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp">

        <TextView
            style="@style/team_name"
            android:layout_weight="1"
            android:text="@string/team_a" />

        <TextView
            android:id="@+id/score"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="sans-serif-light"
            android:gravity="center"
            android:textColor="@color/score"
            android:textSize="40sp" />

        <TextView
            style="@style/team_name"
            android:layout_weight="1"
            android:text="@string/team_b" />
    </LinearLayout>

    <TextView
        android:id="@+id/pitch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/first_part"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:textAllCaps="true"
        android:textSize="24sp" />

    <LinearLayout
        android:id="@+id/record"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/pitch">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <Button
                android:id="@+id/run_a"
                style="@style/button"
                android:onClick="run"
                android:text="@string/runs" />

            <Button
                android:id="@+id/hit_a"
                style="@style/button"
                android:onClick="hit"
                android:text="@string/hits" />

            <Button
                android:id="@+id/err_a"
                style="@style/button"
                android:onClick="err"
                android:text="@string/errors" />
        </LinearLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@android:color/darker_gray" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <Button
                android:id="@+id/run_b"
                style="@style/button"
                android:onClick="run"
                android:text="@string/runs" />

            <Button
                android:id="@+id/hit_b"
                style="@style/button"
                android:onClick="hit"
                android:text="@string/hits" />

            <Button
                android:id="@+id/err_b"
                style="@style/button"
                android:onClick="err"
                android:text="@string/errors" />
        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/next_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/record"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="4dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginTop="4dp"
        android:onClick="nextPitch"
        android:text="@string/next_pitch_button"
        android:textColor="@color/button_color" />

    <TableLayout
        android:id="@+id/table"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/next_button">

        <include layout="@layout/table_first_row" />

        <include layout="@layout/table_second_row" />

        <include layout="@layout/table_third_row" />

    </TableLayout>

    <Button
        android:id="@+id/reset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:onClick="reset"
        android:text="@string/reset_button"
        android:textColor="@color/button_color" />
</RelativeLayout>
